# browsertools-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cdp-client/: Cargo.toml
crates/cdp-client/src/: accessibility.rs  browser.rs  connection.rs  dom.rs  emulation.rs  error.rs  extensions.rs  input.rs  lib.rs  network.rs  page.rs  runtime.rs  session.rs  target.rs  tracing.rs
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  main.rs
crates/mcp-tools/: Cargo.toml
crates/mcp-tools/src/: collector.rs  context.rs  lib.rs  page_state.rs  response.rs  server.rs  slim_server.rs  wait_for.rs
crates/mcp-tools/src/formatters/: console.rs  issue.rs  mod.rs  network.rs  snapshot.rs
crates/mcp-tools/src/tools/: categories.rs  console.rs  definition.rs  emulation.rs  extensions.rs  in_page.rs  input.rs  lighthouse.rs  memory.rs  mod.rs  network.rs  pages.rs  performance.rs  screencast.rs  screenshot.rs  script.rs  slim.rs  snapshot.rs
crates/mcp-tools/src/utils/: extension_registry.rs  files.rs  keyboard.rs  mod.rs  pagination.rs
crates/trace-engine/: Cargo.toml
crates/trace-engine/src/: formatter.rs  insights.rs  lib.rs  model.rs  parser.rs
