[package]
name = "chrome-devtools-mcp"
description = "Chrome DevTools MCP server - control and inspect Chrome from AI assistants"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "chrome-devtools-mcp"
path = "src/main.rs"

[dependencies]
mcp-tools = { workspace = true }
cdp-client = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { version = "1.3.0", features = ["server", "transport-io"] }
