[package]
name = "mcp-tools"
description = "MCP tool definitions and handlers for Chrome DevTools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cdp-client = { workspace = true }
trace-engine = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
tempfile = { workspace = true }
rmcp = { version = "1.3.0", features = ["server"] }
schemars = "1"
which = { workspace = true }
