[package]
name = "trace-engine"
description = "Chrome performance trace parsing and Web Vitals extraction"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
flate2 = { workspace = true }
